--- a/ui/package.json
+++ b/ui/package.json
@@ -19,5 +19,6 @@
   "devDependencies": {
     "enzyme": "^3.3.0",
     "enzyme-adapter-react-16": "^1.1.1"
-  }
+  },
+  "proxy": "http://localhost:8080"
 }
