--- a/ui/package.json
+++ b/ui/package.json
@@ -6,10 +6,10 @@
     "axios": "^0.18.0",
     "jest-cli": "^21.2.1",
     "query-string": "^6.1.0",
-    "react": "^16.4.1",
-    "react-dom": "^16.4.1",
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "1.1.4",
+    "react-scripts": "^3.0.1",
     "react-toastify": "^4.1.0"
   },
   "scripts": {
@@ -22,5 +22,17 @@
     "enzyme": "^3.3.0",
     "enzyme-adapter-react-16": "^1.1.1"
   },
-  "proxy": "http://localhost:8080"
+  "proxy": "http://localhost:8080",
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
+  }
 }
